[project]
name = "contentdb"
authors = [
    {name = "Andrew Ward", email = "rw@rubenwardy.com"},
]
version = "1.25.1"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt(>=4.3.0,<5.0)",
    "beautifulsoup4>=4.14.3",
    "bleach>=6.3.0",
    "celery>=5.6.3",
    "deep-compare>=1.0.5",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-babel>=4.0.0",
    "flask-flatpages>=0.9.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "git-archive-all>=1.23.1",
    "gitdb>=4.0.12",
    "github-flask>=3.2.0",
    "gitpython>=3.1.50",
    "gunicorn>=26.0.0",
    "kombu>=5.6.2",
    "libsass>=0.23.0",
    "linkify-it-py>=2.1.0",
    "lxml>=6.1.1",
    "markdown-it-py>=4.2.0",
    "mdit-py-plugins>=0.6.1",
    "passlib>=1.7.4",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pygments>=2.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-magic>=0.4.27",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "requests>=2.34.2",
    "sentry-sdk[flask]>=2.60.0",
    "sqlalchemy>=2.0.50",
    "sqlalchemy-searchable>=3.0.0",
    "ua-parser>=1.0.2",
    "user-agents>=2.2.0",
    "validators>=0.35.0",
    "werkzeug>=3.1.8",
    "wtforms>=3.2.2",
    "wtforms-sqlalchemy>=0.4.2",
]
